# Multi-Agent-Legal-Contract-Analyzer

./: .env.example  .gitignore  README.md  debug_runner.py  main.py  pyproject.toml  requirements.txt  sample_nda_with_risks.txt
agents/: classifier_agent.py  risk_detector_agent.py  splitter_agent.py
files/: mutual_clean.txt  mutual_risky.txt  unilateral_clean.txt  unilateral_risky.txt
prompts/: classifier_prompt.txt  risk_detector_prompt.txt  splitter_prompt.txt
prompts/gemini/: classifier_prompt.txt  risk_detector_prompt.txt  splitter_prompt.txt
prompts/openai/: classifier_prompt.txt  risk_detector_prompt.txt  splitter_prompt.txt
src/legaldoc/: __init__.py
src/legaldoc/agents/: __init__.py  base_agent.py  classifier_agent.py  document_analyzer_agent.py  risk_detector_agent.py  splitter_agent.py
src/legaldoc/prompts/: __init__.py  classifier_prompt.txt  document_analyzer_prompt.txt  risk_detector_prompt.txt  splitter_prompt.txt
src/legaldoc/utils/: __init__.py  llm_client.py  llm_provider_manager.py  load_env.py  pdf_generator.py  schemas.py
utils/: __init__.py  llm_provider_manager.py  load_env.py  pdf_generator.py  prompt_manager.py
